# constrained

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  main.cpp
benchmark/include/: non_null.hpp
include/: constrained_type.hpp  optional.hpp
include/constrained_type/: combinators.hpp  constrained_type.hpp  value_pack.hpp
include/constrained_type/combinators/: core.hpp  macro.hpp  operators.hpp
include/constrained_type/combinators/static/: algorithm.hpp  comparisons.hpp  logical.hpp  macro.hpp  rank2.hpp  relational.hpp  utility.hpp
test/: CMakeLists.txt
test/src/: configuration_point.cpp  construction.cpp  operators.cpp  value_pack.cpp
